app/assets/stylesheets/stalk.css.scss
// Place all the styles related to the Stalk controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
* {
  font-family:'Lucida Grande', 'Lucida Sans', 'Lucida Sans Unicode', 'Helvetica Neue', 'Helvetica', 'Arial', 'Verdana', 'sans-serif';
}
body,form {
  margin:0px;
  padding:0px;
}

input[type=text] {
  font-size: 1em;
  width:433px;
  border:1px solid #d9d9d9;
  margin:0px ;
  border-radius:3px;
  height:28px;
  line-height:28px;
}
input[type=submit] {
  font-size: 0.7em;
  color:#757575;
  font-weight:bold;
  background-color:#f4f4f4;
  border:1px solid #d9d9d9;
  margin:0px auto;
  border-radius:3px;
  cursor:pointer;
  height:31px;
  line-height:27px;
}
.add_follower{
  float:right;
  border:1px solid #d9d9d9;
  border-radius:3px;
  color:#757575;
  font-weight:bold;
  background-color:#f4f4f4;
  cursor:pointer;
}
.stalkee 
{
  img{
    border-radius:5px;
    border:1px solid #5caed7;
    width:48px;
    height:48px;
  }
  

}
.stalkee,.follower
{
  overflow:hidden;
  min-width:230px;
  float:left;
  padding:5px;
  border:1px solid #5caed7;
  border-radius:5px;
  -webkit-box-shadow:#e0e0e0 1px 1px 5px 0;
  background-color:#e8f4fa;
  margin:10px;
}
.follower{
  height:58px;
}
.results
{
  padding:10px;
}

.footer
{
  text-align:center;
  font-size:0.7em;
  margin:50px;
}

.help{
  color:gray;
  font-size:0.7em;
}
.notice
{
  padding:5px;
  border:1px solid red;
  border-radius:5px;
  background-color:pink;
  margin:10px;
  .example{
    font-size:0.7em;
  }
}

.twitter-share-button
{
  float:right;
  margin:2px;
}

